--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: log_wrapper
 description: A new Flutter project.
-version: 0.0.1
-homepage:
+version: 1.0.0
+homepage: https://github.com/flutter-packagist/log_wrapper
 
 environment:
   sdk: '>=2.19.6 <3.0.0'
@@ -11,7 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   logger: 2.0.1
-  path_provider: 2.0.15
+  path_provider: 2.1.0
 
 dev_dependencies:
   flutter_test:
