--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,14 +4,14 @@ version: 1.0.0
 homepage: https://github.com/flutter-packagist/log_wrapper
 
 environment:
-  sdk: '>=2.19.6 <3.0.0'
+  sdk: '>=2.19.6 <4.0.0'
   flutter: ">=1.17.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  logger: 2.0.1
-  path_provider: 2.1.0
+  logger: ^2.0.1
+  path_provider: ^2.1.0
 
 dev_dependencies:
   flutter_test:
